# FashionMNISTSolver

./: .gitignore  CMakeLists.txt  README.md  main.sh  run.sh
src/: activation.h  csv.h  csv_reader.h  hyperparameters.h  main.cpp  matrix.h  network.h  timer.h
test/: matrix_test.cpp
